# zkvm-primitives

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
example/src/: lib.rs
fuel-zkvm-primitives-input-provider/: Cargo.toml
fuel-zkvm-primitives-input-provider/src/: lib.rs  relayer_recorder.rs
fuel-zkvm-primitives-prover/: Cargo.toml
fuel-zkvm-primitives-prover/src/: games.rs  lib.rs
fuel-zkvm-primitives-prover/src/games/: block_execution_game.rs  decompression_game.rs  decompression_gzip_game.rs
fuel-zkvm-primitives-test-fixtures/: Cargo.toml  README.md  build.rs
fuel-zkvm-primitives-test-fixtures/src/: block_execution_fixtures.rs  counter_contract.rs  decompression_fixtures.rs  fixtures.rs  lib.rs  mainnet_blocks.rs  opcodes.rs  testnet_block.rs  utils.rs
fuel-zkvm-primitives-test-fixtures/src/block_execution_fixtures/: counter_contract.rs  fixtures.rs  mainnet_blocks.rs  opcodes.rs
fuel-zkvm-primitives-test-fixtures/src/block_execution_fixtures/fixtures/: test_consensus_parameters.json
fuel-zkvm-primitives-test-fixtures/src/block_execution_fixtures/fixtures/counter_contract/: .gitignore  Forc.toml  test_consensus_parameters.json
fuel-zkvm-primitives-test-fixtures/src/fixtures/testnet_block/: chain_config.json
fuel-zkvm-primitives-utils/: Cargo.toml
fuel-zkvm-primitives-utils/src/: lib.rs  logs.rs  vm.rs
fuel-zkvm-primitives-utils/src/vm/: alu.rs  base.rs  blob.rs  contract.rs  control.rs  crypto.rs  memory.rs  other.rs  utils.rs  zk.rs
fuel-zkvm-primitives-utils/src/vm/contract/: utils.rs
input-provider/: Cargo.toml
input-provider/src/: lib.rs  relayer_recorder.rs  storage_access_recorder.rs
prover/: Cargo.toml
prover/src/: lib.rs
utils/: Cargo.toml
utils/src/: vm.rs
utils/src/vm/: alu.rs
