[workspace]
members = ["fuel-zkvm-primitives-input-provider", "fuel-zkvm-primitives-prover", "fuel-zkvm-primitives-test-fixtures", "fuel-zkvm-primitives-utils"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
alloy-sol-types = "0.7.7"
bincode = { version = "1.3.3", default-features = false }
fuel-core-executor = { version = "0.40.0", default-features = false, features = [
  "alloc",
] }
fuel-core-storage = { version = "0.40.0", default-features = false, features = [
  "alloc",
] }
fuel-core-types = { version = "0.40.0", default-features = false, features = [
  "serde",
  "test-helpers",
] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", default-features = false, features = ["derive"] }
fuels = "0.66.10"
fuels-core = "0.66.10"
