[workspace]
members = [
  "fuel-zkvm-primitives-input-provider",
  "fuel-zkvm-primitives-prover",
  "fuel-zkvm-primitives-test-fixtures",
  "fuel-zkvm-primitives-utils",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
alloy-sol-types = "0.8.22"
bincode = { version = "2.0.1", default-features = false }
fuel-core-executor = { version = "0.41.9", default-features = false, features = [
  "alloc",
] }
fuel-core-relayer = { version = "0.41.9" }
fuel-core-storage = { version = "0.41.9", default-features = false, features = [
  "alloc",
] }
fuel-core-types = { version = "0.41.9", default-features = false, features = [
  "serde",
  "test-helpers",
] }
fuel-zkvm-primitives-input-provider = { path = "fuel-zkvm-primitives-input-provider" }
fuel-zkvm-primitives-prover = { path = "fuel-zkvm-primitives-prover" }
fuel-zkvm-primitives-utils = { path = "fuel-zkvm-primitives-utils" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", default-features = false, features = ["derive"] }
fuels = "0.70.0"
fuels-core = "0.70.0"
fuel-core = { version = "0.41.9", features = [
  "rocksdb",
  "wasm-executor",
  "relayer",
  "test-helpers",
] }
