[package]
name = "fuel-zkvm-primitives-input-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
fuel-core-executor = { workspace = true }
fuel-core-relayer = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
fuel-zkvm-primitives-prover = { workspace = true }
tai64 = { workspace = true }
