[package]
name = "fuel-zkvm-primitives-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
anyhow = { version = "1", default-features = false }
bincode = { workspace = true }
fuel-block-committer-encoding = "0.10.7"
fuel-core-compression = { workspace = true }
fuel-core-executor = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
postcard = "1.0.10"
serde = { workspace = true }
tai64 = { workspace = true }
thiserror = "2.0.3"

[dev-dependencies]
rand = "0.9.0"
