[package]
name = "fuel-zkvm-primitives-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
anyhow = { version = "1", default-features = false }
bincode = { workspace = true }
fuel-block-committer-encoding = { version = "0.10.7", optional = true }
fuel-core-compression = { workspace = true, optional = true }
fuel-core-executor = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
postcard = { version = "1.0.10", optional = true }
rand = { version = "0.9.0", optional = true }
serde = { workspace = true }
tai64 = { workspace = true }
thiserror = { version = "2.0.3", optional = true }

[dev-dependencies]

[features]
compression-game = ["dep:fuel-block-committer-encoding", "dep:postcard", "dep:fuel-core-compression", "dep:thiserror", "dep:rand"]
