[package]
name = "fuel-zkvm-primitives-test-fixtures"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
bincode = { workspace = true }
clap = { version = "^4.5", features = ["derive"], optional = true }
enum-iterator = { version = "2.1.0", optional = true }
fuel-zkvm-primitives-prover = { path = "../fuel-zkvm-primitives-prover" }
fuel-zkvm-primitives-utils = { path = "../fuel-zkvm-primitives-utils" }
serde = { workspace = true, optional = true }
tokio = { workspace = true }
include_dir = "0.7.4"

[build-dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
forc = "0.66.7"
fuel-core = { workspace = true }
fuel-core-executor = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
fuel-zkvm-primitives-input-provider = { path = "../fuel-zkvm-primitives-input-provider" }
fuel-zkvm-primitives-prover = { path = "../fuel-zkvm-primitives-prover" }
fuel-zkvm-primitives-utils = { path = "../fuel-zkvm-primitives-utils", features = [
  "enhanced_enums",
  "serde",
] }
fuels = { workspace = true }
fuels-core = { workspace = true }
futures = "0.3.31"
primitive-types = "0.13.1"
serde_json = { version = "1", default-features = false }
tempfile = "3.17.1"
tokio = { workspace = true }

[dev-dependencies]
paste = "1.0"

[features]
enhanced_enums = [
  "fuel-zkvm-primitives-utils/enhanced_enums",
  "dep:enum-iterator",
  "dep:clap",
]
serde = ["dep:serde", "fuel-zkvm-primitives-utils/serde"]
