[package]
name = "fuel-zkvm-primitives-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.5", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum-iterator = { version = "2.1.0", optional = true }
ethnum = "1.3"
fuel-core-storage = { workspace = true, features = ["test-helpers"] }
fuel-core-types = { workspace = true }
fuels = { workspace = true }
fuels-core = { workspace = true }
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
serde = { workspace = true, optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
enhanced_enums = ["dep:clap", "dep:enum-iterator"]
serde = ["dep:serde"]
