[package]
name = "fuel-zkvm-primitives-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.0", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum-iterator = { version = "2.1.0", optional = true }
ethnum = "1.3"
fuel-core-storage = { workspace = true, features = ["test-helpers"] }
fuel-core-types = { workspace = true }
fuels = { workspace = true }
fuels-core = { workspace = true }
hex = "0.4.3"
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
serde = { workspace = true, optional = true }

[features]
enhanced_enums = ["dep:clap", "dep:enum-iterator"]
serde = ["dep:serde"]
