[package]
name = "input-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
fuel-core-executor = { workspace = true }
fuel-core-relayer = { version = "0.40.0" }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
prover = { path = "../prover" }
tempfile = "3"
tokio = { workspace = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
